# Profiler-Chart

./: .gitignore  CMakeLists.txt  PerformanceMeasurement.h  main.cpp
Modules/Chart/: CMakeLists.txt
Modules/Chart/include/: BarWidget.h  CustomChartView.h  MainWidget.h
Modules/Chart/source/: BarWidget.cpp  CustomChartView.cpp  MainWidget.cpp
